# OTU

./: .IMG_3880.MOV.icloud  .resume.pdf.icloud  .screerecord.mp4.icloud  README.md  imgui.ini  main_record.launch  main_run.launch  make_run  odot script  tags
ARMA/: .Screen Recording 2021-06-16 at 12.49.10 AM.mov.icloud
ODOT_CUTIE/LINUX BIN/: Makefile  moc_roscli.cpp  qmake_qmake_immediate.qrc
ODOT_CUTIE/ODOT_UI/: CMakeLists.txt  Icons.ui.qml  PresetsScreen.qml  Presetsave.ui.qml  Running.ui.qml  RunningCancelation.ui.qml  RunningLogic.qml  RunningScreen.ui.qml  Smallbutton.ui.qml  StartScreen.ui.qml  Washprogram.ui.qml  Washprogramgrid.ui.qml  Washprogramsettings.qml  washingMachineUI.qml  washingMachineUI.qmlproject.qtds
ODOT_CUTIE/ODOT_UI+BE/: Makefile  ODOT.pro  ODOT_UI+BE.pro  main.cpp  roscli.cpp  roscli.h
ODOT_CUTIE/ODOT_UI+BE/qml/: ApplicationFlow.qml  CameraView.qml  CameraView.ui.qml  Flatbackground.ui.qml  Presets.ui.qml  PresetsScreen.qml  Presetsroll.ui.qml  Running.ui.qml  (+10 more)
ODOT_CUTIE/build-ODOT-Desktop_Qt_5_15_1_clang_64bit-Debug/: Makefile  moc_odot_io.cpp  moc_roscli.cpp  qmake_qmake_immediate.qrc
ODOT_CUTIE/garbage/: Bigbutton.ui.qml  Flatbackground.ui.qml  LockButton.ui.qml  Presets.ui.qml  WashProgramList.qml  Washprogramitem.ui.qml
ODOT_IG/: imgui.ini  make_run
ODOT_IG/launch/: ros_handler.launch
ODOT_IG/src/: ImGui_SDK_helper.cpp  OTU.cpp  imgui.ini
cutie/ODOT/: Presetscroll.ui.qml  QuickStartButton.ui.qml  Quickstarts.ui.qml  washingMachineUI.qmlproject.qtds
launch/: hello_world  odot_testing.launch
src/: OTU  OTU.cpp  main.cpp
(+6 files in other folders)
